tests/errors/sem.type-mismatch.arr-item.or
main :: () -> void {
    [2]int.{true, 1};
};
